Fix the height of slide-05.jpg so it doesn't create a gap at 1024 px wide viewport.  Fix the button functionality for the features section that Matt pointed out.

--- a/metacatui/src/main/webapp/css/metacatui.css
+++ b/metacatui/src/main/webapp/css/metacatui.css
@@ -324,15 +324,15 @@ Bold 700 Italic
       margin-bottom: 30px;
     }
     
-    section#Features button {
+    section#Features a.btn-info {
       background-color: #6C94A4;
       color: #FFFFFF;
-      border: none;
+      /*border: none;
       text-shadow: none;
-      box-shadow: none;
+      box-shadow: none;*/
     }
 
-    section#Features button:hover {
+    section#Features a.btn-info:hover {
       background-color: #5C7F8C;
     
     } 
